code/objects/SMS__c.object
<CustomObject>
    <fields>
        <fullName>Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>SMS</relationshipLabel>
        <relationshipName>SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SMS</relationshipLabel>
        <relationshipName>SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Debug__c</fullName>
        <label>Debug</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incoming</fullName>
                </value>
                <value>
                    <fullName>Outgoing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gateway</label>
        <referenceTo>Gateway__c</referenceTo>
        <relationshipLabel>SMS</relationshipLabel>
        <relationshipName>SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>SMS</relationshipLabel>
        <relationshipName>SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Scheduled_Delivery__c</fullName>
        <label>Scheduled Delivery</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Sending</fullName>
                </value>
                <value>
                    <fullName>Sent Successfully</fullName>
                </value>
                <value>
                    <fullName>Received Successfully</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SMS</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Contact__c</columns>
        <columns>Message__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Direction__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Attachments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Incoming</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Lead__c</columns>
        <columns>Message__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Campaign__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Direction__c</field>
            <operation>equals</operation>
            <value>Incoming</value>
        </filters>
        <label>Incoming</label>
    </listViews>
    <listViews>
        <fullName>Outgoing</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Lead__c</columns>
        <columns>Message__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Campaign__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Direction__c</field>
            <operation>equals</operation>
            <value>Outgoing</value>
        </filters>
        <label>Outgoing</label>
    </listViews>
    <listViews>
        <fullName>Scheduled</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Lead__c</columns>
        <columns>Message__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Scheduled_Delivery__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Scheduled</label>
    </listViews>
    <nameField>
        <displayFormat>SMS{YY}{MM}{DD}-{0000}</displayFormat>
        <label>SMS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>